jitfailure-ffc_form_6603204335ef394b4f43557b66ec11eda033ae19/error.log
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp: In member function 'virtual void ffc_form_6603204335ef394b4f43557b66ec11eda033ae19_exterior_facet_integral_main_2::tabulate_tensor(double*, const double* const*, const double*, std::size_t, int) const':
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:117:18: error: redeclaration of 'const double J_c3'
     const double J_c3 = coordinate_dofs[1] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[4] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:104:18: note: 'const double J_c3' previously declared here
     const double J_c3 = coordinate_dofs[1] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[4] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:118:18: error: redeclaration of 'const double J_c4'
     const double J_c4 = coordinate_dofs[1] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[7] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:101:18: note: 'const double J_c4' previously declared here
     const double J_c4 = coordinate_dofs[1] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[7] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:119:18: error: redeclaration of 'const double J_c5'
     const double J_c5 = coordinate_dofs[1] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[10] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:102:18: note: 'const double J_c5' previously declared here
     const double J_c5 = coordinate_dofs[1] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[10] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:120:18: error: redeclaration of 'const double J_c6'
     const double J_c6 = coordinate_dofs[2] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[5] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:103:18: note: 'const double J_c6' previously declared here
     const double J_c6 = coordinate_dofs[2] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[5] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:121:18: error: redeclaration of 'const double J_c7'
     const double J_c7 = coordinate_dofs[2] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[8] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:97:18: note: 'const double J_c7' previously declared here
     const double J_c7 = coordinate_dofs[2] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[8] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:122:18: error: redeclaration of 'const double J_c8'
     const double J_c8 = coordinate_dofs[2] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[11] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:98:18: note: 'const double J_c8' previously declared here
     const double J_c8 = coordinate_dofs[2] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[11] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:123:18: error: redeclaration of 'const double J_c0'
     const double J_c0 = coordinate_dofs[0] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[3] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:100:18: note: 'const double J_c0' previously declared here
     const double J_c0 = coordinate_dofs[0] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[3] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:124:18: error: redeclaration of 'const double J_c1'
     const double J_c1 = coordinate_dofs[0] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[6] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:99:18: note: 'const double J_c1' previously declared here
     const double J_c1 = coordinate_dofs[0] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[6] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:125:18: error: redeclaration of 'const double J_c2'
     const double J_c2 = coordinate_dofs[0] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[9] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
/tmp/tmpdr31lvw7/ffc_form_6603204335ef394b4f43557b66ec11eda033ae19.cpp:96:18: note: 'const double J_c2' previously declared here
     const double J_c2 = coordinate_dofs[0] * FE33_C0_D001_F_Q1[0][0][0] + coordinate_dofs[9] * FE33_C0_D001_F_Q1[0][0][1];
                  ^~~~
